# describer

./: README.md  main.py  pyproject.toml
notebooks/: architecture.ipynb
utils/: dloaders.py
