[project]
name = "describer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "transformers[torch]>=4.53.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
    "pre-commit>=4.2.0",
    "ruff>=0.12.1",
]
